[gd_scene load_steps=7 format=3 uid="uid://cj4r66lunaphl"]

[ext_resource type="Script" path="res://Scripts/editor.gd" id="1_b8vl0"]
[ext_resource type="Texture2D" uid="uid://dq03xakwirr5d" path="res://Assets/Sprites/Windows/buttonBig.png" id="2_bqgdt"]
[ext_resource type="FontFile" path="res://Assets/Fonts/standartx16.tres" id="3_2bqgu"]
[ext_resource type="StyleBox" uid="uid://c7goxkkmtdbmt" path="res://Styles/ButtonNormal.tres" id="3_dse5b"]
[ext_resource type="StyleBox" uid="uid://dbrqkp0ditsj" path="res://Styles/ButtonPressed.tres" id="4_lu7h0"]

[sub_resource type="Theme" id="Theme_o6i4n"]
default_font = ExtResource("3_2bqgu")

[node name="editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -728.0
offset_bottom = -272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_b8vl0")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bqgdt")
region_rect = Rect2(2, 2, 28, 28)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Editor" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="ItemList" type="ItemList" parent="NinePatchRect/VBoxContainer/Editor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
same_column_width = true
fixed_column_width = 32

[node name="CodeEdit" type="CodeEdit" parent="NinePatchRect/VBoxContainer/Editor"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2bqgu")
theme_override_font_sizes/font_size = 18
line_folding = true
gutters_draw_breakpoints_gutter = true
gutters_draw_line_numbers = true

[node name="FileNameBox" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/FileNameBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2bqgu")
placeholder_text = "Enter Filename"

[node name="Controls" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/Controls"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_o6i4n")
theme_override_constants/separation = 16

[node name="NewFileButton" type="Button" parent="NinePatchRect/VBoxContainer/Controls/HBox"]
layout_mode = 2
focus_mode = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2bqgu")
theme_override_styles/normal = ExtResource("3_dse5b")
theme_override_styles/hover = ExtResource("3_dse5b")
theme_override_styles/pressed = ExtResource("4_lu7h0")
theme_override_styles/focus = ExtResource("3_dse5b")
text = "New File"

[node name="SaveButton" type="Button" parent="NinePatchRect/VBoxContainer/Controls/HBox"]
layout_mode = 2
focus_mode = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2bqgu")
theme_override_styles/normal = ExtResource("3_dse5b")
theme_override_styles/hover = ExtResource("3_dse5b")
theme_override_styles/pressed = ExtResource("4_lu7h0")
theme_override_styles/focus = ExtResource("3_dse5b")
text = "Save"

[node name="DeleteButton" type="Button" parent="NinePatchRect/VBoxContainer/Controls/HBox"]
layout_mode = 2
focus_mode = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2bqgu")
theme_override_styles/normal = ExtResource("3_dse5b")
theme_override_styles/hover = ExtResource("3_dse5b")
theme_override_styles/pressed = ExtResource("4_lu7h0")
theme_override_styles/focus = ExtResource("3_dse5b")
text = "Delete
"

[node name="InfoLabel" type="Label" parent="NinePatchRect/VBoxContainer/Controls/HBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="InfoLabelTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="item_activated" from="NinePatchRect/VBoxContainer/Editor/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Controls/HBox/NewFileButton" to="." method="_on_new_file_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Controls/HBox/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Controls/HBox/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="timeout" from="InfoLabelTimer" to="." method="_on_timer_timeout"]
